Fix listnav visibility on resize

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -282,7 +282,7 @@ h2 {
   }
 
   .listnav {
-    display: block;
+    display: block !important;
     position: initial;
     background: none;
     padding: 0;
